@@ -23,6 +23,7 @@ RewriteRule ^sign-up$ views/users/sign-up.php [L]
 RewriteRule ^sign-out$ views/users/sign-out.php [L]
 RewriteRule ^sign-in$ views/users/sign-in.php [L]
 RewriteRule ^sign-out.php$ sign-out [L]
+RewriteRule ^show-users$ views/admin/show_users.php [L]
 
 
 # ----- Courses ------
