@@ -5,13 +5,24 @@
 	require_once(D_ROOT . "/reou/controllers/users_controller.php");
 	$users = show_users($db);
 
-
 ?>
 
 
-<ul>
+<table id="table" class="user-list-table">
+	<tr class="user-list--header"> 
+		<th> Email </th>
+		<th> Name </th>
+		<th> Role </th>
+		<th> Status </th>
+	</tr>
+
 	<?php foreach ($users as $k => $user) { ?>
-		<li> <?php echo $user["email"] ?> </li>
+			<tr>
+				<td> <?php echo $user["email"] ?> <a href="#"> Edit </a> </td>
+				<td> <?php echo $user["first_name"]  . " " . $user["last_name"] ?> </td>
+				<td> <?php echo $user["role"] ?> </td>
+				<td> <?php var_dump($user['active'])?> </td>
+			</tr>
 	<?php  } ?>
-	
-</ul>
+
+</table>
