@@ -1,8 +1,0 @@
-<?php
-
-
-	require_once($_SERVER['DOCUMENT_ROOT'] . "/reou/includes/const.php");
-	require_once(D_ROOT . "/reou/controllers/users_controller.php");
-
-
-?>
