@@ -9,32 +9,27 @@
 
 
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-
 	<div class="main-content">
 
 		<div class="course-container">
 
-		<!-- Show Course Categories -->
-		<?php  foreach ($categories as $k => $category) { ?>
+			<!-- Show Course Categories -->
+			<?php  foreach ($categories as $k => $category) { ?>
+					<!-- background image refactor needed. Right now its just an inline style. -->
+					<a class="course-container--box" href='<?php echo course_route("course_classes", ["id" => $category["category_id"] ]) ?>'
+					style='background: linear-gradient( rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05) ), url( "<?php echo asset_route('dbimg') . $category['image_filename'] ?>" )'>
 
+						<div class="course-container--box-header">
+								<?php echo $category['category_name'] ?>
+						</div>
 
-				<!-- background image refactor needed. Right now its just an inline style. -->
-				<a class="course-container--box" href='<?php echo course_route("course_classes", ["id" => $category["category_id"] ]) ?>'
-				style='background: linear-gradient( rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05) ), url( "<?php echo asset_route('dbimg') . $category['image_filename'] ?>" )'>
+						<div class="course-container--box-body">
+							
+						</div>
 
-					<div class="course-container--box-header">
-							<?php echo $category['category_name'] ?>
-					</div>
-
-					<div class="course-container--box-body">
-						
-					</div>
-
-					<div class="course-container--box-footer"></div>
-				</a>
-					
-
-		<?php } ?>
+						<div class="course-container--box-footer"></div>
+					</a>
+			<?php } ?>
 
 		</div>
 
